<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/grey_light"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cvItemsDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginRight="@dimen/margin_small"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:elevation="10dp"
        android:padding="@dimen/padding_medium"
        app:cardCornerRadius="5dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cvItemDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ivItem"
                android:layout_width="@dimen/item_image_cart_size"
                android:layout_height="@dimen/item_image_cart_size"
                android:background="@color/primary_x_light"
                android:padding="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvItemName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingTop="@dimen/padding_small"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintRight_toLeftOf="@id/ivItem"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Item name" />

            <TextView
                android:id="@+id/tvItemQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/padding_small"
                android:paddingTop="@dimen/padding_small"
                android:text="@string/product_quantity"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                app:layout_constraintStart_toEndOf="@+id/ivItem"
                app:layout_constraintTop_toBottomOf="@id/tvItemName" />

            <TextView
                android:id="@+id/tvItemRate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/rs_"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_small"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/cvItemDetails"
                app:layout_constraintStart_toEndOf="@+id/ivItem" />

            <TextView
                android:id="@+id/tvItemMrp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/padding_small"
                android:paddingBottom="@dimen/padding_small"
                android:text="@string/mrp_"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_x_small"
                app:layout_constraintBottom_toBottomOf="@id/cvItemDetails"
                app:layout_constraintLeft_toRightOf="@id/tvItemRate" />

            <LinearLayout
                android:id="@+id/llView"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_small"
                android:weightSum="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/ivSubtract"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_x_small"
                    android:layout_weight="0.35"
                    android:background="@drawable/rectangle_rounded_small"
                    android:padding="@dimen/margin_x_small"
                    android:src="@drawable/ic_minus" />

                <TextView
                    android:id="@+id/tvCount"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:gravity="center"
                    android:padding="@dimen/margin_small"
                    android:text="0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_size_medium"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/ivAdd"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginVertical="@dimen/margin_x_small"
                    android:layout_weight="0.35"
                    android:background="@drawable/rectangle_rounded_small"
                    android:padding="@dimen/margin_x_small"
                    android:src="@drawable/ic_add" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>
